# superpowered-lua

./: .gitignore  CMakeLists.txt  README.md
sample/: Makefile.osx  main.m
src/: lua_superpowered.cpp  lua_superpowered.h  lua_superpowered_player.cpp  lua_superpowered_player.h  lua_superpowered_player_apple.mm  lua_superpowered_player_ios.mm  lua_superpowered_player_linux.cpp  lua_superpowered_player_osx.mm  mylog.h
src/platform/: SpPlayerBase.cpp  SpPlayerBase.h  lua_superpowered_player_common.cpp
src/platform/android/: SpPlayer.cpp  SpPlayer.h  lua_superpowered_player_android.cpp
src/platform/ios/: SpPlayer.h  SpPlayer.mm  lua_superpowered_player_ios.cpp
src/platform/linux/: lua_superpowered_player_linux.cpp
src/platform/osx/: SpPlayer.h  SpPlayer.mm  lua_superpowered_player_osx.cpp
test/: Makefile  main.cpp  run-lua  run-lua-prebuild  test.lua
